Fixed passive functionality whilst switching between touch tools.

--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.html
@@ -20,7 +20,8 @@
                  type="text"
                  autocomplete="off"
                  placeholder="Enter Segmentation Label.."
-                 onfocus="this.select()"/>
+                 onfocus="this.select()"
+                 tabindex="1"/>
           <i class="{{validLabelIcon}} brush-metadata-validity-indicator"
              style="color:{{validLabelColor}};">
           </i>
@@ -34,7 +35,8 @@
                  type="text"
                  autocomplete="off"
                  placeholder="Search.."
-                 onfocus="this.select()"/>
+                 onfocus="this.select()"
+                 tabindex="2"/>
           <i class="{{validSegmentationTypeIcon}} brush-metadata-validity-indicator"
              style="color:{{validSegmentationTypeColor}}">
           </i>
