--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
@@ -2,7 +2,8 @@
 
   <dialog id="freehandSetName"
       class="freehand-set-name noselect"
-      oncontextmenu="return false">
+      oncontextmenu="return false"
+      autofocus>
       <div class="freehand-set-name-horizontal-box">
         <h5>Enter New ROI Name</h5>
         <a class="freehand-set-name-cancel btn btn-sm btn-secondary">
@@ -13,10 +14,9 @@
         <input name="freehandTextInput"
                class="freehand-set-name-input form-themed form-control"
                type="text"
-               tabindex="-1"
                autocomplete="off"
                placeholder="Enter name.."
-               onfocus="this.select()"/>
+               />  <!--tabindex="-1"--> <!--onfocus="this.select()"-->
         <a class="freehand-set-name-confirm btn btn-sm btn-primary">
           <i class="fa fa fa-check-circle fa-2x"></i>
         </a>
