WIP expandable nav.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.html
@@ -1,9 +1,9 @@
 <template name="xnatNavigation">
-  <dialog
+  <div
     id="xnatNavigation"
-    class="xnat-navigation-dialog noselect"
+    class="xnat-navigation-window noselect"
     oncontextmenu="return false"
   >
     {{> React component=XNATNavigation}}
-  </dialog>
+  </div>
 </template>
