--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -1,28 +1,19 @@
 @import "{ohif:design}/app"
 
-.xnat-navigation-dialog
-  theme('border', '1px solid $uiBorderColor', 0.95)
-  theme('background', '$uiGrayDarkest', 0.95)
-  theme('color', '$textSecondaryColor')
-  z-index: 1000
-  position: absolute
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-  margin: auto
+.xnat-navigation-window
+  theme('color', '$textPrimaryColor')
+
+  float: left
+  height: 100%
+  width: 100%
   overflow: hidden
-  padding: 10px
-  max-height: 500px
-  min-height: 200px
-  height: calc(100% - 150px)
-  max-width: calc(100% - 100px)
-  border-radius: 8px
+  background-color: black
+  margin: 8px
+  padding-bottom: 20px
 
   h5
     font-weight: 400
     text-align: left
-
 
   h3
     font-weight: 400
@@ -34,7 +25,16 @@
     padding-right: 18px
     overflow-y: auto
     overflow-x: hidden
-    display:inline-block;
+    display:inline-block
 
-  ul
-    padding-left: 20px
+    .xnat-nav-horizontal-box
+      display: -webkit-flex
+      display: -ms-flexbox
+      display: flex
+      flex-direction: row
+      align-items: baseline
+      align-self: flex-start
+
+    ul
+      padding-left: 10px
+      list-style-type: none
