Highlight currently selected.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -47,3 +47,9 @@
       .xnat-nav-session-caret
         padding-left: 30px
         padding-right: 10px
+
+  .xnat-nav-shared
+    color: #FFCB99
+
+  .xnat-nav-active
+    color: #FFFF00
