Solid working nav.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -32,6 +32,9 @@
       margin-left: 10px
       margin-right: 10px
 
+    .xnat-nav-button-disabled
+      background-color: grey
+
     .xnat-nav-horizontal-box
       display: -webkit-flex
       display: -ms-flexbox
