Add loading for ROIs.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -47,9 +47,9 @@
       padding-left: 10px
       list-style-type: none
 
-      .xnat-nav-session-caret
-        padding-left: 30px
-        padding-right: 10px
+      .xnat-nav-session
+        margin-left: 50px
+        margin-right: 10px
 
   .xnat-nav-shared
     color: #FFCB99
