--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.styl
@@ -58,7 +58,7 @@
   z-index: 1000
 
   max-height: calc(100% - 50px)
-  max-width: calc(100% - 100px)
+  max-width: calc(500px)
   position: absolute
   margin: auto
 
