Add checking/JSON generation at the Nav bar Session level.

--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
@@ -6,7 +6,7 @@
       <h1><i class="fa fa-spin fa-circle-o-notch fa-fw"></i></h1>
   </dialog>
 
-  <dialog id="importVolumes"
+  <dialog id="ioProgress"
       class="io-dialog noselect"
       oncontextmenu="return false">
       <h5 id="ioNotificationText">Importing ROI Collections from archive...</h5>
