Cleaned up and made sure scrollbar for navbar sticks to the right.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -5,9 +5,9 @@
 
   float: left
   height: 100%
-  width: 100%
-  overflow: hidden
+  width: 95%
   background-color: black
+  overflow: auto
   margin: 8px
   padding-bottom: 20px
 
@@ -23,9 +23,7 @@
   .xnat-navigation-tree
     max-height: calc(100%)
     text-align: left
-    padding-right: 18px
-    overflow-y: auto
-    overflow-x: hidden
+
     display:inline-block
 
     .xnat-nav-button
