Add renaming functionality to volume menu.

--- a/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeListItem/volumeListItem.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeListItem/volumeListItem.html
@@ -7,6 +7,11 @@
       <th class="centered-cell ">
         <input type="radio" class="js-switch-button" {{checked}} name="sync" value="">
       </th>
+      <td class='centered-cell'>
+        <a class="js-volume-rename btn btn-sm btn-secondary">
+          <i class="fa fa-wrench"></i>
+        </a>
+      </td>
     {{/if}}
   </tr>
 </template>
