--- a/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeList/volumeList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeList/volumeList.html
@@ -6,12 +6,12 @@
 
       {{#if isDefault}}
         <th></th>
-        <th colspan="3"> Working ROI Collection</th>
+        <th colspan="4"> Working ROI Collection</th>
       {{else}}
         <th>
           <i class="{{showHideButton}} btn btn-sm btn-secondary js-show-hide"></i>
         </th>
-        <th colspan="2">{{this.structureSetName}}</th>
+        <th colspan="3">{{this.structureSetName}}</th>
         <th>
           <i class="{{displayRoiCollectionButton}} btn btn-sm btn-secondary js-display-roiCollection"></i>
         </th>
@@ -25,7 +25,8 @@
           <th><!--Blank Cell to allow indent with strong alignment--></th>
           <th>Name</th>
           <th class="centered-cell">Contours</th>
-          <th class="centered-cell">Edit</th>
+          <th class="centered-cell">Active</th>
+          <th class="centered-cell">Rename</th>
         </tr>
         {{#each ROIContour in this.ROIContourArray}}
             {{>volumeListItem ROIContour}}
