Can now unlock ROIs for editing.

--- a/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeList/volumeList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeList/volumeList.html
@@ -11,9 +11,12 @@
         <th>
           <i class="{{showHideButton}} btn btn-sm btn-secondary js-show-hide"></i>
         </th>
-        <th colspan="3">{{this.structureSetName}}</th>
+        <th colspan="2">{{this.structureSetName}}</th>
         <th>
           <i class="{{displayRoiCollectionButton}} btn btn-sm btn-secondary js-display-roiCollection"></i>
+        </th>
+        <th>
+          <i class="fa fa-unlock  btn btn-sm btn-secondary js-unlock-roiCollection"></i>
         </th>
       {{/if}}
     </tr>
