--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/ioHelpMenu/divs/ioHelpExport.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/ioHelpMenu/divs/ioHelpExport.html
@@ -23,7 +23,7 @@
     {{else}}
       <p>
         This command is disabled as you do not have the required permissions to
-        write ROI Collections to {{projectId}}/{{experimentLabel}}. If you
+        write ROI Collections to {{projectId}}. If you
         believe that you should, please contact the project owner.
       </p>
     {{/if}}
