--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/ioHelpMenu/divs/ioHelpImport.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/ioHelpMenu/divs/ioHelpImport.html
@@ -22,7 +22,7 @@
     {{else}}
       <p>
         This command is disabled as you do not have the required permissions to
-        read ROI Collections from {{projectId}}/{{experimentLabel}}. If you
+        read ROI Collections from {{projectId}}. If you
         believe that you should, please contact the project owner.
       </p>
     {{/if}}
