Added hotkeys and updated UI for toggle buttons.

--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/freehandHelpMenu.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/freehandHelpMenu.html
@@ -18,11 +18,11 @@
             </svg>
           </a>
           <a class="sub-help-button js-help-toggle-stats btn btn-sm btn-primary">
-            <i id="fontAwesomeIcon" class="{{pressed 'Stats ON/OFF'}} fa fa-commenting fa-2x"></i>
+            <i id="fontAwesomeIcon" class="{{pressed 'Stats'}} fa fa-commenting fa-2x"></i>
           </a>
           <a class="sub-help-button js-help-interpolate btn btn-sm btn-primary">
             <svg class={{pressed 'Interpolate'}}>
-              <use xlink:href={{absoluteUrl "packages/icr_peppermint-tools/assets/icons.svg#icon-freehand-interpolate-on"}}></use>
+              <use xlink:href={{absoluteUrl "packages/icr_peppermint-tools/assets/icons.svg#icon-freehand-interpolate-on-no-highlight"}}></use>
             </svg>
           </a>
         </div>
@@ -39,7 +39,7 @@
           {{>freehandHelpSculpt}}
         {{else if showFreehandHelp 'ROI Management'}}
           {{>freehandHelpVolumes}}
-        {{else if showFreehandHelp 'Stats ON/OFF'}}
+        {{else if showFreehandHelp 'Stats'}}
           {{>freehandHelpToggleStats}}
         {{else if showFreehandHelp 'Interpolate'}}
           {{>freehandHelpInterpolate}}
