Clean up UI for long series descriptions and long series numbers.

--- a/Packages/ohif-viewerbase/client/components/studyBrowser/thumbnailEntry/thumbnailEntry.html
+++ b/Packages/ohif-viewerbase/client/components/studyBrowser/thumbnailEntry/thumbnailEntry.html
@@ -6,7 +6,7 @@
             </div>
             <div class="seriesDetails flex-h m-x-1 {{#unless stack.seriesDescription}}info-only{{/unless}}">
                 <div class="seriesDescription flex-grow">
-                    {{stack.seriesDescription}}
+                    {{paddedSeriesNumber stack.seriesDescription}}
                 </div>
                 <div class="seriesInformation">
                     <div class="item item-series clearfix">
