--- a/Packages/ohif-viewerbase/client/components/studyBrowser/thumbnailEntry/thumbnailEntry.styl
+++ b/Packages/ohif-viewerbase/client/components/studyBrowser/thumbnailEntry/thumbnailEntry.styl
@@ -14,13 +14,12 @@ $seriesCountBackgroundColor = #678696
 
   .seriesDetails
     theme('color', '$textPrimaryColor')
-    font-size: 14px
+    font-size: 12px
     line-height: 1.3em
     margin-top: 5px
     max-width: 217px
     min-height: 36px
     position: relative
-    word-wrap: break-word
 
     &.info-only
 
@@ -49,6 +48,7 @@ $seriesCountBackgroundColor = #678696
 
   .seriesInformation
     padding-right: 4px
+    padding-left: 5px
     max-width: 50px
 
     .item-frames .icon
@@ -60,8 +60,7 @@ $seriesCountBackgroundColor = #678696
       float: right
       font-size: 12px
       margin-left: 4px
-      overflow: hidden
-      text-overflow: ellipsis
+      overflow: display
       white-space: nowrap
       width: calc(100% - 15px)
 
