Styled scrollbars for webkit browsers.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -5,11 +5,21 @@
 
   float: left
   height: 100%
-  width: 95%
+  width: 97%
   background-color: black
   overflow: auto
-  margin: 8px
+  theme('scrollbar-color', '$imageSliderColor black')
+  margin-left: 8px
   padding-bottom: 20px
+
+  &::-webkit-scrollbar
+    background: black
+    width: 10px
+
+  &::-webkit-scrollbar-thumb
+    theme('background', '$imageSliderColor')
+    border-radius: 10px
+    border-right: 2px solid black
 
   h5
     font-weight: 400
