--- a/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListDialogs.html
@@ -2,6 +2,8 @@
   <dialog id="roiImportListDialog"
       class="roi-import-list-dialog noselect"
       oncontextmenu="return false">
-      {{> React component=RoiImportListDialog key = key}}
+      <div>
+      {{> React component=RoiImportListDialog id=id key=id}}
+      </div>
   </dialog>
 </template>
