--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
@@ -4,6 +4,9 @@
         <svg class="logo-image">
             <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-ohif-logo"}}></use>
         </svg>
+        <svg class="logo-image-icr">
+            <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-icr-logo"}}></use>
+        </svg>
         <div class="logo-text">OHIF-XNAT Viewer 1.18.0</div>
         {{/section}}
         <!-- TODO: options removed for now, may be made more compatible to XNAT-OHIF version in the future.
