--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.styl
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.styl
@@ -13,7 +13,15 @@ body>.header
       float: left
       height: 100%
       margin: 0 8px 0 0
-      width: 30px
+      width: 32px
+
+    .logo-image-icr
+      display: inline-block
+      fill: transparent
+      float: left
+      height: 100%
+      margin: 0 8px 0 0
+      width: 48px
 
     .logo-text
       display: inline-block
@@ -32,7 +40,7 @@ body>.header
     .menu-toggle
       display: inline-block
       height: 18px
-      
+
     .research-use
       font-size: 13px
       theme('color', '$textSecondaryColor')
