Finished RoiCollectionBuilderDialog and renamed it RoiExportListDialog

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -7,7 +7,7 @@
             {{>stackSyncDialog}}
             {{>ioDialogs}}
             {{>volumeManagementDialogs}}
-            {{>roiCollectionBuilderDialogs}}
+            {{>roiExportListDialogs}}
             {{>roiImportListDialogs}}
             {{>helpDialogs}}
             {{>freehandSetNameDialogs}}
