Fixed edge case of export ROIs an added ICR logo.

--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
@@ -4,7 +4,10 @@
         <svg class="logo-image">
             <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-ohif-logo"}}></use>
         </svg>
-        <div class="logo-text">OHIF-XNAT Viewer 1.17.0</div>
+        <svg class="logo-image-icr">
+            <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-icr-logo"}}></use>
+        </svg>
+        <div class="logo-text">OHIF-XNAT Viewer 2.0 RC1</div>
         {{/section}}
         <!-- TODO: options removed for now, may be made more compatible to XNAT-OHIF version in the future.
         {{#section 'headerMenu'}}
