Reactified segBuilderDialogs and renamed it segExportListDialogs.

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -14,7 +14,7 @@
             {{>brushMetadataDialogs}}
             {{>segManagementDialogs}}
             {{>brushSettingsDialogs}}
-            {{>segBuilderDialogs}}
+            {{>segExportListDialogs}}
             {{>maskImportListDialogs}}
         </div>
         <div id="viewer">
