Cleaned up legacy files and renamed segExportListDialogs -> maskExportListDialogs for consistency.

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -14,7 +14,7 @@
             {{>brushMetadataDialogs}}
             {{>segManagementDialogs}}
             {{>brushSettingsDialogs}}
-            {{>segExportListDialogs}}
+            {{>maskExportListDialogs}}
             {{>maskImportListDialogs}}
         </div>
         <div id="viewer">
