--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
@@ -1,11 +1,4 @@
 <template name="ioDialogs">
-  <dialog id="exportVolumes"
-      class="io-dialog noselect"
-      oncontextmenu="return false">
-      <h5>Exporting ROI Collection to archive...</h5>
-      <h1><i class="fa fa-spin fa-circle-o-notch fa-fw"></i></h1>
-  </dialog>
-
   <dialog id="ioProgress"
       class="io-dialog noselect"
       oncontextmenu="return false">
@@ -17,14 +10,7 @@
     class="io-message-dialog noselect"
     oncontextmenu="return false">
     <div>
-      <h5 class="io-description">Title</h5>
-      <a class="io-dialog-cancel io-dialog-cancel-js btn btn-sm btn-secondary">
-        <i class="fa fa-times-circle fa-2x"></i>
-      </a>
-    </div>
-
-    <div>
-      <p class="io-body">Text</p>
+      {{> React component=MessageDialog title=messageDialogTitle body=messageDialogBody}}
     </div>
   </dialog>
 
