--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
@@ -1,26 +1,12 @@
 <template name="freehandSetNameDialogs">
-
-  <dialog id="freehandSetName"
-      class="freehand-set-name noselect"
-      oncontextmenu="return false"
-      autofocus>
-      <div class="freehand-set-name-horizontal-box">
-        <h5>Enter New ROI Name</h5>
-        <a class="freehand-set-name-cancel btn btn-sm btn-secondary">
-          <i class="fa fa-times-circle fa-2x"></i>
-        </a>
-      </div>
-      <div class="freehand-set-name-horizontal-box">
-        <input name="freehandTextInput"
-               class="freehand-set-name-input form-themed form-control"
-               type="text"
-               autocomplete="off"
-               placeholder="Enter name.."
-               />  <!--tabindex="-1"--> <!--onfocus="this.select()"-->
-        <a class="freehand-set-name-confirm btn btn-sm btn-primary">
-          <i class="fa fa fa-check-circle fa-2x"></i>
-        </a>
-      </div>
+  <dialog
+    id="freehandSetNameDialog"
+    class="freehand-set-name-dialog noselect"
+    oncontextmenu="return false"
+  >
+    <div>
+      {{> React component=FreehandSetNameDialog defaultName=defaultName
+      callback=callback}}
+    </div>
   </dialog>
-
 </template>
