--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs_old/freehandSetNameDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs_old/freehandSetNameDialogs.styl
@@ -1,6 +1,6 @@
 @import "{ohif:design}/app"
 
-.freehand-set-name-dialog
+.freehand-set-name
   theme('border', '1px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
