--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
@@ -28,6 +28,10 @@
   .brush-metadata-new-button
     width: 100%
 
+  .brush-metadata-new-button-invalid
+    width: 100%
+    theme('background', '$uiGray')
+
   .brush-metadata-label-input
     margin-bottom: 20px
 
