--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -12,7 +12,7 @@
             {{>helpDialogs}}
             {{>freehandSetNameDialogs}}
             {{>brushMetadataDialogs}}
-            {{>segManagementDialogs}}
+            {{>brushManagementDialogs}}
             {{>brushSettingsDialogs}}
             {{>maskExportListDialogs}}
             {{>maskImportListDialogs}}
