--- a/Packages/icr-peppermint-tools/client/components/viewer/brushManagementDialogs/brushManagementDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushManagementDialogs/brushManagementDialogs.styl
@@ -65,7 +65,7 @@
     width: 100%
 
 
-.brush-delete-dialog
+.brush-management-delete-dialog
   theme('border', '1px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
