--- a/Packages/icr-peppermint-tools/client/components/viewer/brushManagementDialogs/brushManagementDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushManagementDialogs/brushManagementDialogs.styl
@@ -38,8 +38,9 @@
     width: 100%
 
   .brush-management-list-bordered
-    theme('border-top', '1px solid $textSecondaryColor')
-    theme('border-bottom', '1px solid $textSecondaryColor')
+    border-width: 1px
+    border-top-style: solid
+    border-bottom-style: solid
 
   .brush-management-vert-box
     display: -webkit-flex
