--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
@@ -6,7 +6,7 @@
   >
     <div>
       {{> React component=FreehandSetNameDialog defaultName=defaultName
-      callback=callback}}
+      callback=callback key=id}}
     </div>
   </dialog>
 </template>
