--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -6,7 +6,7 @@
             {{>annotationDialogs}}
             {{>stackSyncDialog}}
             {{>ioDialogs}}
-            {{>volumeManagementDialogs}}
+            {{>roiManagementDialogs}}
             {{>roiExportListDialogs}}
             {{>roiImportListDialogs}}
             {{>helpDialogs}}
