Cleaned up some CSS

--- a/Packages/icr-peppermint-tools/client/components/viewer/brushManagementDialogs/brushManagementDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushManagementDialogs/brushManagementDialogs.styl
@@ -34,57 +34,28 @@
     text-align: right
     margin-top: 16px
 
-  .brushManagementTableButton
-    width: 100%
-
   .brush-management-list-bordered
     border-width: 1px
     border-top-style: solid
     border-bottom-style: solid
 
-  .brush-management-vert-box
-    display: -webkit-flex
-    display: -ms-flexbox
-    display: flex
-    flex-direction: column
-    justify-context: flex-start
-
-  .brush-management-vert-box label
-    margin-top: 20px
-    text-align: left
-
-  .brush-management-horizontal-box
-    display: -webkit-flex
-    display: -ms-flexbox
-    display: flex
-    flex-direction: row
-    align-items: baseline
-    justify-context: space-between
-
   .brush-management-new-button
     float: center
     width: 100%
 
+  .brush-management-list
+    max-height: 300px
+    padding-right: 18px
+    overflow-y: auto
+    overflow-x: hidden
+    display: inline-block
+    theme('scrollbar-color', '$textSecondaryColor $uiGrayDarkest')
 
-.brush-management-delete-dialog
-  theme('border', '1px solid $uiBorderColor', 0.95)
-  theme('background', '$uiGrayDarkest', 0.95)
-  theme('color', '$textSecondaryColor')
-  z-index: 1000
+    &::-webkit-scrollbar
+      them('background', '$uiGrayDarkest')
+      width: 10px
 
-  max-height: calc(100% - 50px)
-  max-width: calc(100% - 100px)
-  position: absolute
-  margin: auto
-
-  padding-right: 10px
-  padding-left: 10px
-  padding-bottom: 10px
-  border-radius: 8px
-  text-align: center
-
-  h3
-    font-weight: 400
-    text-align: left
-    border-radius: 8px
-    padding: 2px
+    &::-webkit-scrollbar-thumb
+      theme('background', '$textSecondaryColor')
+      border-radius: 10px
+      theme('border-right', '2px solid $uiGrayDarkest')
