--- a/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/ioDialogs/ioDialogs.html
@@ -2,8 +2,8 @@
   <dialog id="ioProgress"
       class="io-dialog noselect"
       oncontextmenu="return false">
-      <h5 id="ioNotificationText">Importing ROI Collections from archive...</h5>
-      <h1 id="ioProgressText"><i class="fa fa-spin fa-circle-o-notch fa-fw"></i></h1>
+      <h5 id="ioNotificationText"></h5>
+      <h1 id="ioProgressText"></h1>
   </dialog>
 
   <dialog id="ioMessage"
@@ -28,27 +28,6 @@
       </a>
       <a class="js-io-confirmation-cancel btn btn-sm btn-primary">
         <i class="fa fa fa-times-circle fa-2x"></i>
-      </a>
-    </div>
-  </dialog>
-
-  <!-- Confirmation Overwrite Dialog -->
-  <dialog id="ioOverwriteConfirmationDialog"
-    class="io-confirmation-dialog noselect"
-    oncontextmenu="return false">
-    <div>
-      <h5 class="io-confirmation-title"></h5>
-      <p class="io-confirmation-body"></p>
-    </div>
-    <div class="io-confirmation-horizontal-box">
-      <a class="js-io-confirmation-confirm-overwrite btn btn-sm btn-primary">
-        Overwrite
-      </a>
-      <a class="js-io-confirmation-confirm-new btn btn-sm btn-primary">
-        New
-      </a>
-      <a class="js-io-confirmation-cancel btn btn-sm btn-primary">
-        Cancel <i class="fa fa fa-times-circle fa-2x"></i>
       </a>
     </div>
   </dialog>
