--- a/Packages/icr-peppermint-tools/client/components/viewer/roiManagementDialogs/roiManagementDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/roiManagementDialogs/roiManagementDialogs.styl
@@ -7,14 +7,14 @@
   theme('color', '$textSecondaryColor')
   z-index: 1000
 
-  max-height: calc(100% - 50px)
+  max-height: calc(100% - 100px)
   max-width: calc(100% - 100px)
   position: absolute
   margin: auto
 
   padding-right: 10px
   padding-left: 10px
-  padding-top: 10px
+  padding-top: 5px
   padding-bottom: 10px
   border-radius: 8px
   text-align: center
@@ -29,15 +29,29 @@
     font-weight: 400
     text-align: left
 
+  .roi-management-collection-list-body
+    max-height: 300px
+    padding-right: 18px
+    overflow-y: auto
+    overflow-x: hidden
+    display: inline-block
+    theme('scrollbar-color', '$textSecondaryColor $uiGrayDarkest')
+
+    &::-webkit-scrollbar
+      them('background', '$uiGrayDarkest')
+      width: 10px
+
+    &::-webkit-scrollbar-thumb
+      theme('background', '$textSecondaryColor')
+      border-radius: 10px
+      theme('border-right', '2px solid $uiGrayDarkest')
+
   .roi-management-cancel
     text-align: right
     margin-top: 16px
 
   .roi-management-new-button
     float: center
-    width: 100%
-
-  .roiManagementTableButton
     width: 100%
 
   .roi-list-header
