--- a/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/roiImportListDialogs/roiImportListDialogs.styl
@@ -46,11 +46,20 @@
     width: 100%
 
   .roi-import-list-body
-    max-height: calc(80vh - 300px);
+    max-height: 300px
     padding-right: 18px
     overflow-y: auto
     overflow-x: hidden
     display: inline-block
+    theme('scrollbar-color', '$textSecondaryColor $uiGrayDarkest')
+
+    &::-webkit-scrollbar
+      them('background', '$uiGrayDarkest')
+      width: 10px
+
+    &::-webkit-scrollbar-thumb
+      theme('background', '$textSecondaryColor')
+      border-radius: 10px
 
   .roi-import-list-body table, tr, th
     padding: 0px 10px
