--- a/StandaloneViewer/StandaloneViewer/client/components/flexboxLayout/flexboxLayout.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/flexboxLayout/flexboxLayout.html
@@ -1,15 +1,22 @@
 <template name="flexboxLayout">
     <div class="viewerSection">
         <div class="sidebarMenu sidebar-left {{#if leftSidebarOpen}}sidebar-open{{/if}}">
-            {{>studyBrowser (clone this)}}
+            {{#if leftSidebarScanList}}
+              {{>studyBrowser (clone this)}}
+            {{/if}}
+            {{#if leftSidebarChangeSession}}
+              {{> xnatNavigation}}
+            {{/if}}
         </div>
         <div class="mainContent {{#if leftSidebarOpen}}sidebar-left-open{{/if}} {{#if rightSidebarOpen}}sidebar-right-open{{/if}}">
             {{>standaloneViewerMain (clone this)}}
         </div>
 
+        <!--
         <div class="sidebarMenu sidebar-right {{#if rightSidebarOpen}}sidebar-open{{/if}}">
             {{> xnatNavigation}}
         </div>
+        -->
 
     </div>
 </template>
