Finished migration of ROI Contour window to side bar.

--- a/Packages/icr-peppermint-tools/client/components/viewer/peppermint-table.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/peppermint-table.styl
@@ -1,7 +1,9 @@
-.peppermint-table tr, th, td
-  padding: 0px 5px
-  float: center
-  white-space: nowrap
+.peppermint-table
+  width: 100%
+
+  tr, th, td
+    padding: 0px 5px
+    word-wrap: break-word
 
   .centered-cell
     text-align: center
