--- a/Packages/ohif-design/styles/imports/variables.styl
+++ b/Packages/ohif-design/styles/imports/variables.styl
@@ -6,7 +6,8 @@ $topBarExpandedHeight = 160px
 $toolbarHeight = 78px
 $toolbarDrawerHeight = 62px
 $studiesSidebarMenuWidth = 307px
-$rightSidebarMenuWidth = 323px
+// JamesAPetts - increase right sidebar width.
+$rightSidebarMenuWidth = 500px
 $studyListPadding = 8%
 $studyListPaddingMediumScreen = 10px
 
@@ -18,7 +19,6 @@ $logoFontWeight = 300
 $transitionDuration = 0.3s
 $transitionEffect = ease
 $sidebarTransition = all $transitionDuration $transitionEffect
-
 
 // Thicknesses
 $viewportBorderThickness = 1px
